--- a/Server.csproj
+++ b/Server.csproj
@@ -54,12 +54,11 @@
     <Reference Include="AngleSharp, Version=0.9.9.0, Culture=neutral, PublicKeyToken=e83494dcdc6d31ea, processorArchitecture=MSIL">
       <HintPath>..\packages\AngleSharp.0.9.11\lib\net45\AngleSharp.dll</HintPath>
     </Reference>
-    <Reference Include="Communication, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\Communication\bin\Debug\Communication.dll</HintPath>
+    <Reference Include="Communication">
+      <HintPath>..\sharpdj\Communication\bin\Debug\Communication.dll</HintPath>
     </Reference>
     <Reference Include="CryptSharp, Version=2.1.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\CryptSharpOfficial.2.1.0.0\lib\CryptSharp.dll</HintPath>
+      <HintPath>packages\CryptSharpOfficial.2.1.0.0\lib\CryptSharp.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
@@ -68,27 +67,30 @@
       <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="Scs, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Scs.1.1.1\lib\net40-client\Scs.dll</HintPath>
-      <Private>True</Private>
+      <HintPath>packages\Scs.1.1.1\lib\net40-client\Scs.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
-    <Reference Include="YoutubeExplode, Version=4.6.4.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\YoutubeExplode.4.6.4\lib\net45\YoutubeExplode.dll</HintPath>
+    <Reference Include="System.Net.Http" />
+    <Reference Include="YoutubeExplode, Version=4.6.6.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\YoutubeExplode.4.6.6\lib\net45\YoutubeExplode.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataSingleton.cs" />
-    <Compile Include="Migrations\201903051309426_Prototype.cs" />
-    <Compile Include="Migrations\201903051309426_Prototype.Designer.cs">
-      <DependentUpon>201903051309426_Prototype.cs</DependentUpon>
+    <Compile Include="Migrations\201903051742357_Prototype.cs" />
+    <Compile Include="Migrations\201903051742357_Prototype.Designer.cs">
+      <DependentUpon>201903051742357_Prototype.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Connection.cs" />
+    <Compile Include="Models\Log.cs" />
+    <Compile Include="Models\MediaHistory.cs" />
     <Compile Include="Models\Room.cs" />
     <Compile Include="Models\RoomConfig.cs" />
     <Compile Include="Models\ServerContext.cs" />
@@ -97,22 +99,22 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\Scrypt.cs" />
-    <Compile Include="ServerConfig.cs" />
-    <Compile Include="ServerManagment\Commands\AfterLoginData.cs" />
-    <Compile Include="ServerManagment\Commands\DisconnectCommand.cs" />
-    <Compile Include="ServerManagment\Commands\ICommand.cs" />
-    <Compile Include="ServerManagment\Commands\JoinQueueCommand.cs" />
-    <Compile Include="ServerManagment\Commands\JoinRoom.cs" />
-    <Compile Include="ServerManagment\Commands\LoginCommand.cs" />
-    <Compile Include="ServerManagment\Commands\RegisterCommand.cs" />
-    <Compile Include="ServerManagment\Commands\SendMessageChatCommand.cs" />
-    <Compile Include="ServerManagment\ServerLogic.cs" />
-    <Compile Include="ServerManagment\Server.cs" />
-    <Compile Include="ServerManagment\ServerReceiver.cs" />
-    <Compile Include="ServerManagment\ServerSender.cs" />
-    <Compile Include="ServerManagment\Utils.cs" />
-    <Compile Include="Sql\SqlHelper.cs" />
-    <Compile Include="Sql\SqlUserCommands.cs" />
+    <Compile Include="deprecated\ServerConfig.cs" />
+    <Compile Include="deprecated\ServerManagment\Commands\AfterLoginData.cs" />
+    <Compile Include="deprecated\ServerManagment\Commands\DisconnectCommand.cs" />
+    <Compile Include="deprecated\ServerManagment\Commands\ICommand.cs" />
+    <Compile Include="deprecated\ServerManagment\Commands\JoinQueueCommand.cs" />
+    <Compile Include="deprecated\ServerManagment\Commands\JoinRoom.cs" />
+    <Compile Include="deprecated\ServerManagment\Commands\LoginCommand.cs" />
+    <Compile Include="deprecated\ServerManagment\Commands\RegisterCommand.cs" />
+    <Compile Include="deprecated\ServerManagment\Commands\SendMessageChatCommand.cs" />
+    <Compile Include="deprecated\ServerManagment\ServerLogic.cs" />
+    <Compile Include="deprecated\ServerManagment\Server.cs" />
+    <Compile Include="deprecated\ServerManagment\ServerReceiver.cs" />
+    <Compile Include="deprecated\ServerManagment\ServerSender.cs" />
+    <Compile Include="deprecated\ServerManagment\Utils.cs" />
+    <Compile Include="deprecated\Sql\SqlHelper.cs" />
+    <Compile Include="deprecated\Sql\SqlUserCommands.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -132,9 +134,12 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201903051309426_Prototype.resx">
-      <DependentUpon>201903051309426_Prototype.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201903051742357_Prototype.resx">
+      <DependentUpon>201903051742357_Prototype.cs</DependentUpon>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Changes.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
