--- a/packages.config
+++ b/packages.config
@@ -2,19 +2,20 @@
 <packages>
   <package id="32feet.NET" version="3.5.0.0" targetFramework="net472" />
   <package id="AngleSharp" version="0.9.11" targetFramework="net452" />
-  <package id="ConsoleTables" version="2.2.0" targetFramework="net472" />
+  <package id="ConsoleTables" version="2.3.0" targetFramework="net472" />
   <package id="CryptSharpOfficial" version="2.1.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="InTheHand.Pontoon" version="10.2018.3.19" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
-  <package id="Network" version="6.1.0.7" targetFramework="net472" />
+  <package id="Network" version="6.1.2.15" targetFramework="net472" />
   <package id="Network.Bluetooth" version="4.0.1803.22" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="net472" />
-  <package id="YoutubeExplode" version="4.6.8" targetFramework="net472" />
+  <package id="YoutubeExplode" version="4.7.4" targetFramework="net472" />
 </packages>
