--- a/Server.csproj
+++ b/Server.csproj
@@ -78,17 +78,22 @@
       <HintPath>packages\32feet.NET.3.5.0.0\lib\net\InTheHand.Net.Personal.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Network, Version=6.1.2.15, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>packages\Network.6.1.2.15\lib\net46\Network.dll</HintPath>
+    <Reference Include="Network, Version=6.1.3.18, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\Network.6.1.3.18\lib\net46\Network.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
+      <HintPath>packages\NLog.4.6.8\lib\net45\NLog.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Net.Sockets, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>packages\System.Net.Sockets.4.3.0\lib\net46\System.Net.Sockets.dll</HintPath>
@@ -100,6 +105,9 @@
       <Private>True</Private>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Transactions" />
     <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
     </Reference>
@@ -134,18 +142,11 @@
     <Compile Include="Management\ServerPacketsToHandleList.cs" />
     <Compile Include="Management\HandlersAction\ServerLoginAction.cs" />
     <Compile Include="Management\Server.cs" />
-    <Compile Include="Migrations\201907060110255_Claims.cs" />
-    <Compile Include="Migrations\201907060110255_Claims.Designer.cs">
-      <DependentUpon>201907060110255_Claims.cs</DependentUpon>
+    <Compile Include="Migrations\201912192330170_Initial.cs" />
+    <Compile Include="Migrations\201912192330170_Initial.Designer.cs">
+      <DependentUpon>201912192330170_Initial.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201907210111317_AuthenticationKey.cs" />
-    <Compile Include="Migrations\201907210111317_AuthenticationKey.Designer.cs">
-      <DependentUpon>201907210111317_AuthenticationKey.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201907212136417_RoomChatPostUpdate.cs" />
-    <Compile Include="Migrations\201907212136417_RoomChatPostUpdate.Designer.cs">
-      <DependentUpon>201907212136417_RoomChatPostUpdate.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\EF\Claim.cs" />
     <Compile Include="Models\EF\RoleClaim.cs" />
     <Compile Include="Models\EF\ServerRole.cs" />
@@ -153,11 +154,6 @@
     <Compile Include="Models\InstanceHelpers\RoomHelper.cs" />
     <Compile Include="Models\ServerUserModel.cs" />
     <Compile Include="Management\Strategy\ITrackStrategy.cs" />
-    <Compile Include="Migrations\201903121714458_Prototype.cs" />
-    <Compile Include="Migrations\201903121714458_Prototype.Designer.cs">
-      <DependentUpon>201903121714458_Prototype.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\EF\UserConnection.cs" />
     <Compile Include="Models\EF\Conversation.cs" />
     <Compile Include="Models\EF\ConversationMessage.cs" />
@@ -178,6 +174,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="NLog.config" />
+    <None Include="NLog.xsd">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -194,17 +194,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201903121714458_Prototype.resx">
-      <DependentUpon>201903121714458_Prototype.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201907060110255_Claims.resx">
-      <DependentUpon>201907060110255_Claims.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201907210111317_AuthenticationKey.resx">
-      <DependentUpon>201907210111317_AuthenticationKey.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201907212136417_RoomChatPostUpdate.resx">
-      <DependentUpon>201907212136417_RoomChatPostUpdate.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201912192330170_Initial.resx">
+      <DependentUpon>201912192330170_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
