--- a/packages.config
+++ b/packages.config
@@ -7,9 +7,12 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="InTheHand.Pontoon" version="10.2018.3.19" targetFramework="net472" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net472" />
-  <package id="Network" version="6.1.2.15" targetFramework="net472" />
+  <package id="Network" version="6.1.3.18" targetFramework="net472" />
   <package id="Network.Bluetooth" version="4.0.1803.22" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="NLog" version="4.6.8" targetFramework="net472" />
+  <package id="NLog.Config" version="4.6.8" targetFramework="net472" />
+  <package id="NLog.Schema" version="4.6.8" targetFramework="net472" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
   <package id="System.Threading" version="4.3.0" targetFramework="net472" />
