Logging basic info to file and console

--- a/NLog.config
+++ b/NLog.config
@@ -4,23 +4,18 @@
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
       throwExceptions="true"
-      internalLogLevel="true" internalLogFile="c:\temp\nlog-internal.log">
+      throwConfigExceptions="true"
+      internalLogLevel="Off" internalLogFile="c:\temp\nlog-internal.log">
 
-  <!-- optional, add some variables
-  https://github.com/nlog/NLog/wiki/Configuration-file#variables
-  -->
-
-  <!--
-  See https://github.com/nlog/nlog/wiki/Configuration-file
-  for information on customizing logging rules and outputs.
-   -->
   <targets>
-    <target name="logfile" xsi:type="File" fileName="file.txt" />
-    <target name="logconsole" xsi:type="Console" />
+    <target name="fileErrors" xsi:type="File" fileName="debug.txt" />
+    <target name="fileInfo" xsi:type="File" fileName="info.txt" />
+    <target name="console" xsi:type="Console" />
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Info" writeTo="logconsole" />
-    <logger name="*" minlevel="Debug" writeTo="logfile" />
+    <logger name="*" minlevel="Debug" writeTo="console" />
+    <logger name="*" levels="Info,Trace" writeTo="fileInfo" final="true"/>
+    <logger name="*" levels="Debug,Fatal,Error" writeTo="fileErrors" final="true"/>
   </rules>
 </nlog>
