can login from multiple sources

--- a/NLog.config
+++ b/NLog.config
@@ -16,6 +16,6 @@
   <rules>
     <logger name="*" minlevel="Debug" writeTo="console" />
     <logger name="*" levels="Info,Trace" writeTo="fileInfo" final="true"/>
-    <logger name="*" levels="Debug,Fatal,Error" writeTo="fileErrors" final="true"/>
+    <logger name="*" levels="Debug,Fatal,Error,Trace" writeTo="fileErrors" final="true"/>
   </rules>
 </nlog>
